--- a/scorecard.css
+++ b/scorecard.css
@@ -40,7 +40,7 @@ tbody tr:hover {
   cursor: pointer;
 }
 
-/* Highlight the first column for team/player names */
+/* Highlight the first column for names */
 td:first-child, th:first-child {
   background-color: #ecf0f1;
   font-weight: bold;
