--- a/scorecard.css
+++ b/scorecard.css
@@ -6,6 +6,36 @@ body {
   margin: 20px;
 }
 
+.navbar {
+      background-color: #151512;
+      position: fixed;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar li {
+      float: left;
+    }
+
+    .navbar a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding: 14px 16px;
+    }
+
+    .navbar a:hover,
+    .navbar .active {
+      background-color: #068ca9;
+    }
+
 h1 {
   text-align: center;
   color: #2c3e50;
