--- a/tutorial.css
+++ b/tutorial.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: Brush Script MT, Cursive;
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
