--- a/tutorial.css
+++ b/tutorial.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Lucida Console', Monaco, monospace;
+    font-family: 'Garamond', serif;
     background-color: #f4f4f4;
     color: #333;
     margin: 0;
