--- a/imitateFeatures.css
+++ b/imitateFeatures.css
@@ -22,21 +22,21 @@ body {
 }
 
 .penguins {
-  background-image: url('');
+  background-image: url('images/penguins.jpg');
   border: 5px solid white;
   border-radius: 50%;
   padding: 20px;
 }
 
 .football-field {
-  background-image: url('');
+  background-image: url('images/football_field.jpg');
   background-blend-mode: multiply;
   filter: grayscale(100%);
   position: relative;
 }
 .football-field::after {
   content: '';
-  background: url('') no-repeat center;
+  background: url('images/tic-tac-toe.png') no-repeat center;
   background-size: contain;
   position: absolute;
   top: 0;
@@ -46,24 +46,24 @@ body {
 }
 
 .dinosaur {
-  background-image: url('');
+  background-image: url('images/dinosaur.png');
   filter: hue-rotate(180deg);
 }
 
 .seagull {
-  background-image: url('');
+  background-image: url('images/seagull.png');
   box-shadow: 10px 10px 20px rgba(0,0,0,0.4);
   transform: rotate(-5deg);
 }
 
 .butterfly {
-  background-image: url('');
+  background-image: url('images/butterfly.jpg');
   filter: contrast(150%) saturate(120%);
   border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
 }
 
 .theater {
-  background-image: url('');
+  background-image: url('images/theater_stage.jpg');
   filter: brightness(80%);
   text-align: center;
   color: white;
