--- a/imitateFeatures.css
+++ b/imitateFeatures.css
@@ -36,40 +36,40 @@ body {
   background-blend-mode: multiply;
   filter: grayscale(100%);
 }
-.football-field::after {
-  content: '';
-  background: url('images/tic-tac-toe.png') no-repeat center;
-  background-size: contain;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+.tic-tac-toe {
+  border: solid 55px #000000;
+  border-image: url('images/tic-tac-toe.png') 55 round;
 }
 
 .dinosaur {
   background-image: url('images/dinosaur.png');
-  filter: hue-rotate(180deg);
+  filter: hue-rotate(240deg) saturate(200%);
 }
 
 .seagull {
   background-image: url('images/seagull.png');
-  transform: rotate(-5deg);
   box-shadow: 10px 10px 20px rgba(0,0,0,0.4);
 }
 
 .butterfly {
   background-image: url('images/butterfly.jpg');
-  filter: contrast(150%) saturate(120%);
-  border-radius: 50% 50% 50% 50% / 60% 60% 40% 40%;
+  filter: hue-rotate(160deg) saturate(250%) brigthness(110%);
+  border-radius: 113px 1px 94px 1px;
+  -webkit-border-radius: 113px 1px 94px 1px;
+  -moz-border-radius: 113px 1px 94px 1px;
 }
 
 .theater {
   background-image: url('images/theater_stage.jpg');
   filter: brightness(80%);
+  filter: blur(3px);
+  -webkit-filter: blur(3px);
+  -moz-filter: blur(3px);
   color: white;
   font-size: 24px;
   font-weight: bold;
   text-shadow: 1px 1px 2px black;
   text-align: center;
+  vertical-align: bottom;
+ 
 }
