--- a/imitateFeatures.css
+++ b/imitateFeatures.css
@@ -26,7 +26,7 @@ body {
 
 .penguins {
   background-image: url('images/penguins.jpg');\
-  filter: brightness(200%);
+  filter: grayscale(80%) brightness(200%);
   border: 5px solid white;
   border-radius: 50%;
   padding: 0;
@@ -35,21 +35,27 @@ body {
 .football-field {
   background-image: url('images/football_field.jpg');
   filter: grayscale(100%);
-  border: solid 55px #fffdfc;
+  border: solid 55px transparent; 
   border-image: url('images/tic-tac-toe.png') 55 round;
+  box-shadow: 0 0 0 55px #fffdfc;
 }
 
 .dinosaur {
-  background-image: url('images/dinosaur.png');
+  background-image: url('images/dinosaur.png') no-repeat;
   background-size: contain;
-  filter: hue-rotate(127deg);
+  filter: hue-rotate(165deg);
 }
 
 .seagull {
-  background: linear-gradient(90deg,#9bc1f3 0%, #f3f5f6 80%);
+  position: relative;
+  background: linear-gradient(90deg, #9bc1f3 0%, #f3f5f6 80%);
   background-image: url('images/seagull.png');
   background-size: contain;
-  box-shadow: 10px 10px 20px rgba(0,0,0,0.4);
+  background-repeat: no-repeat;
+  background-position: center;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 0.4);
+  filter: brightness(1.1) contrast(1.2) saturate(1.5);
+  overflow: hidden;
 }
 
 .butterfly {
@@ -60,10 +66,8 @@ body {
 
 .theater {
   background-image: url('images/theater_stage.jpg');
-  filter: brightness(80%) blur(3px);
+  filter: brightness(80%) blur(2.5px);
   color: white;
   font-size: 24px;
   font-weight: bold;
-  text-shadow: 1px 1px 2px black;
-  text-align: center;
 }
