--- a/imitateFeatures.css
+++ b/imitateFeatures.css
@@ -36,6 +36,7 @@ body {
   background-image: url('images/football_field.jpg');
   filter: grayscale(100%);
   border: solid 55px white; 
+  border-color: white;
   border-image: url('images/tic-tac-toe.png') 55 round;
 }
 
