--- a/business.css
+++ b/business.css
@@ -44,7 +44,7 @@ nav a.active {
 }
 
 .hero {
-  background: url('images/coffee-cup.jpg') center/cover no-repeat;
+  background: url('') center/cover no-repeat;
   padding: 4em 0;
   color: #fff;
   text-align: center;
