--- a/business.css
+++ b/business.css
@@ -117,8 +117,8 @@ nav a.active {
 .gallery-grid {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  gap: 1em;
-  margin-top: 1em;
+  gap: 16px;
+  margin-top: 16px;
 }
 
 .gallery-grid img {
@@ -135,7 +135,7 @@ nav a.active {
   background-repeat: no-repeat; 
   text-align: center;
   padding: 48px 16px;
-  color: #fff;
+  color: #0a0a0a;
 }
 footer {
   background: #333;
