--- a/business.css
+++ b/business.css
@@ -129,7 +129,7 @@ nav a.active {
 }
 
 .menu {
-  background-image: url('images/menuBackG.jpeg');
+  background-image: url('images/BackGCafe.jpeg');
   background-size: cover;
   background-position: center;  
   background-repeat: no-repeat; 
