--- a/business.css
+++ b/business.css
@@ -131,7 +131,7 @@ nav a.active {
 .menu {
   background-image: url('images/BackGCafe.jpeg');
   background-size: cover;
-  background-position: center;  
+  background-position: left;  
   background-repeat: no-repeat; 
   text-align: center;
   padding: 48px 16px;
